<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="227dp"
            tools:layout_editor_absoluteX="150dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/InfoTitleView"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/info_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/InfoTextTitleView"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/InfoTextView"/>

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/info_usage_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/InfoUsageTitleView"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/info_usage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/InfoUsageView"/>

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/info_auth_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/InfoAuthorTitleView"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/info_auth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/InfoAuthorView"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>