<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintLayout">

    <TextView
            android:text="@string/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/MainTitle"
            android:layout_marginHorizontal="10dp"
            android:textStyle="bold"
            android:textSize="20sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/main_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Result"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/MainTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/Result" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="5dp"
            android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
    <TextView
            android:text="@string/main_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/statusView"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/progressBar"
            android:layout_marginTop="10dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
    <Button
            android:text="@string/main_mes"
            android:layout_width="200dp"
            android:layout_height="200dp" android:id="@+id/MainButton"
            app:layout_constraintTop_toBottomOf="@+id/statusView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
            android:layout_marginStart="10dp" android:layout_marginEnd="10dp" android:layout_marginBottom="10dp"
            app:layout_constraintVertical_bias="0.3"
            app:cornerRadius="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>










